feat: added FederationDetails callback handler - #EG-194
